<resources>
    <string name="app_name">Spark</string>
    <string name="login_username">Username</string>
    <string name="login_username_hint">Email or Username</string>
    <string name="login_password">Password</string>
    <string name="login_password_hint">Password</string>
    <string name="action_settings">Settings</string>
    <string name="submit_login">Login</string>
    <string name="submit_register">Register</string>
    <string name="submit_logout">Logout</string>
    <string name="failed_login">Login Failed</string>
    <string name="failed_register">Registration Failed</string>
    <string name="title_activity_main_menu">Spark</string>
    <string name="loggedIn">You are now Logged In!</string>
    <string name="start_content">Start</string>
     <!--<string name="base_api_url">http://192.168.0.114:8080</string>-->
    <string name="base_api_url">http://ec2-52-24-242-8.us-west-2.compute.amazonaws.com:8080</string>
    <string name="facebook_app_id">104897179853349</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="s3_credentials_duration">7200000</string>
    <string name="s3_bucket_name">com.spark</string>
    <string name="s3_upload_bucket_name">com.spark.userupload</string>
    <string name="s3_profile_bucket_name">com.spark.userprofile</string>
    <!--gcm-->
    <string name="gcm_app_sender_id">51034816021</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="title_activity_viewer">ViewerActivity</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="go_to_upload_text">Upload File</string>
    <string name="upload_file_text">Upload File</string>
    <string name="title_activity_images">Spark</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_capture_image">CaptureImageActivity</string>
    <!--gcm-->
</resources>
