<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivityFragment"
    android:id="@+id/login_page">

    <TextView
        android:id="@+id/username_label"
        android:text="@string/login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:visibility="gone"
        />


    <EditText
        android:id="@+id/username_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username_hint"
        android:inputType="text"
        android:layout_toRightOf="@+id/username_label"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/password_label"
        android:text="@string/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_label"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/password_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:layout_alignTop="@+id/username_label"
        android:layout_toRightOf="@+id/password_label"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        />


    <Button
        android:id="@+id/submit_login"
        android:text="@string/submit_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/password_form"
        android:layout_alignLeft="@+id/password_form"
        android:layout_marginTop="75dp"
        android:onClick="loginRequest"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/submit_register"
        android:text="@string/submit_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/password_form"
        android:layout_toRightOf="@+id/submit_login"
        android:layout_marginTop="75dp"
        android:onClick="registerRequest"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/failed_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/submit_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:visibility="gone"
        />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/submit_login"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:visibility="gone"
        />


</RelativeLayout>
