<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.sparklounge.client.activities.SigninActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/login_page">

        <TextView
            android:id="@+id/username_label"
            android:text="@string/login_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@color/primary_text"
            android:paddingTop="10dp"
            />


        <EditText
            android:id="@+id/username_form"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username_hint"
            android:textColor="@color/primary_text"
            android:inputType="text"
            android:layout_toRightOf="@+id/username_label"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            />

        <TextView
            android:id="@+id/password_label"
            android:text="@string/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_label"
            android:layout_marginTop="35dp"
            android:textColor="@color/primary_text"
            />

        <EditText
            android:id="@+id/password_form"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_hint"
            android:textColor="@color/primary_text"
            android:inputType="textPassword"
            android:layout_alignTop="@+id/username_label"
            android:layout_toRightOf="@+id/password_label"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            />


        <Button
            android:id="@+id/submit_login"
            android:text="@string/submit_login"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:layout_below="@+id/password_form"
            android:layout_alignRight="@+id/failed_request"
            android:layout_alignEnd="@+id/failed_request" />

        <Button
            android:id="@+id/submit_register"
            android:text="@string/submit_register"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/submit_login"
            android:layout_toRightOf="@+id/failed_request"
            android:layout_toEndOf="@+id/failed_request" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/submit_login"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            />

        <TextView
            android:id="@+id/failed_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/fb_login"
            android:textColor="#fd1e2e" />

    </RelativeLayout>

</FrameLayout>
