<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:id="@+id/main_menu_view"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sparklounge.client.MainMenuActivityFragment">

    <TextView
        android:id="@+id/logged_in"
        android:text="@string/loggedIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


    <Button
        android:id="@+id/start_content"
        android:text="@string/start_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:layout_marginBottom="75dp"
        android:onClick="startContent"
        />

    <Button
        android:id="@+id/go_to_upload"
        android:text="@string/go_to_upload_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/start_content"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="75dp"
        android:onClick="goToUpload"
        />

    <Button
        android:id="@+id/submit_logout"
        android:text="@string/submit_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/go_to_upload"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="75dp"
        android:onClick="logoutRequest"
        />

    <Button
        android:id="@+id/newImageView"
        android:text="New Image View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/submit_logout"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="75dp"
        android:layout_centerHorizontal="true"
        android:onClick="startNewView"
        />

</RelativeLayout>
